--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ filelock==3.18.0
 filetype==1.2.0
 Flask==3.1.0
 fonttools==4.58.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
